--- a/Seance2.ipynb
+++ b/Seance2.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -388,8 +388,105 @@
     "class Base(object):\n",
     "    def pop(self):\n",
     "        pass\n",
+    "    \n",
     "    def push(self, elt):\n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Pile(Base):\n",
+    "    def __init__(self):\n",
+    "        self.p = []\n",
+    "        \n",
+    "    def disp(self):\n",
+    "        print (self.p)\n",
+    "    \n",
+    "    def pop(self):\n",
+    "        x = self.p[-1]\n",
+    "        del self.p[-1]\n",
+    "        return x\n",
+    "    \n",
+    "    def push(self, elt):\n",
+    "        self.p.append(elt)    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 16, 2, 3]\n",
+      "[12, 16, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test\n",
+    "p = Pile()\n",
+    "p.push(12)\n",
+    "p.push(16)\n",
+    "p.push(2)\n",
+    "p.push(3)\n",
+    "p.disp()\n",
+    "p.pop()\n",
+    "p.disp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class File(Base):\n",
+    "    def __init__(self):\n",
+    "        self.f = []\n",
+    "        \n",
+    "    def disp(self):\n",
+    "        print(self.f)\n",
+    "        \n",
+    "    def pop(self):\n",
+    "        x = self.f[0]\n",
+    "        del self.f[0]\n",
+    "        return x\n",
+    "    \n",
+    "    def push(self, elt):\n",
+    "        self.f.append(elt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[34, 87, 6]\n",
+      "[87, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test\n",
+    "f = File()\n",
+    "f.push(34)\n",
+    "f.push(87)\n",
+    "f.push(6)\n",
+    "f.disp()\n",
+    "f.pop()\n",
+    "f.disp()"
    ]
   },
   {
@@ -439,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
